<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4sp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8sp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="20sp"
                android:textColor="@color/green"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/purchase"
                android:textSize="20sp"
                android:layout_marginTop="8dp"
                android:textColor="@color/blue"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sale"
                android:textSize="20sp"
                android:layout_marginTop="8dp"
                android:textColor="@color/pink"/>

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="100dp"
            android:background="@color/black"
            android:layout_marginStart="8sp"
            android:layout_marginEnd="8dp"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tmpusd"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/item_values"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tmpnominalbuy"
                android:textSize="20sp"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/item_previous"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tmpnominalsell"
                android:textSize="20sp"
                android:layout_marginTop="8dp"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>